// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render 1`] = `
<div>
  <table
    className="table table-sm table-striped sidebar-options-table"
    id="table-coverage-initializer"
  >
    <tbody>
      <tr>
        <td>
          Coverage Type
        </td>
        <td>
          <select
            className="form-control"
            disabled={false}
            id="selectCoverageType"
            onChange={[Function]}
          >
            <option
              value="census_block"
            >
              Form 477
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Save coverage in
        </td>
        <td>
          <select
            className="form-control"
            disabled={false}
            id="selectGroupKeyType"
            onChange={[Function]}
          >
            <option
              value="serviceArea"
            >
              Service Areas
            </option>
            <option
              value="networkNode"
            >
              Network Nodes
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Limit To Marketable Technology
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={false}
            id="chkLimitMarketableTechnologies"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Limit To Max Equipment Speed
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={false}
            id="chkLimitMaxSpeed"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Use Existing Fiber
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={false}
            id="chkUseExistingFiber"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Use Planned Fiber
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={false}
            id="chkUsePlannedFiber"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Site Assignment
        </td>
        <td>
          <select
            className="form-control"
            disabled={false}
            onChange={[Function]}
            value="Incremental"
          >
            <option
              value="Proximity"
            >
              Proximity
            </option>
            <option
              value="Incremental"
            >
              Incremental
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Selection Type
        </td>
        <td>
          <select
            className="form-control"
            disabled={false}
            id="selectCoverageInitializerSelectionType"
            onChange={[Function]}
          >
            <option
              value="SELECTED_AREAS"
            >
              Service Areas
            </option>
            <option
              value="SELECTED_LOCATIONS"
            >
              Locations
            </option>
            <option
              value="SELECTED_ANALYSIS_AREAS"
            >
              Analysis Areas
            </option>
            <option>
              All Service Areas
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td
          width="50%"
        >
          Selected
          <br />
           Geographies
        </td>
        <td>
          <div>
            (no items selected)
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`When we do not have an existing report 1`] = `
<div>
  <table
    className="table table-sm table-striped sidebar-options-table"
    id="table-coverage-initializer"
  >
    <tbody>
      <tr>
        <td>
          Coverage Type
        </td>
        <td>
          <select
            className="form-control"
            disabled={false}
            id="selectCoverageType"
            onChange={[Function]}
          >
            <option
              value="census_block"
            >
              Form 477
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Save coverage in
        </td>
        <td>
          <select
            className="form-control"
            disabled={false}
            id="selectGroupKeyType"
            onChange={[Function]}
          >
            <option
              value="serviceArea"
            >
              Service Areas
            </option>
            <option
              value="networkNode"
            >
              Network Nodes
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Limit To Marketable Technology
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={false}
            id="chkLimitMarketableTechnologies"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Limit To Max Equipment Speed
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={false}
            id="chkLimitMaxSpeed"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Use Existing Fiber
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={false}
            id="chkUseExistingFiber"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Use Planned Fiber
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={false}
            id="chkUsePlannedFiber"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Site Assignment
        </td>
        <td>
          <select
            className="form-control"
            disabled={false}
            onChange={[Function]}
            value="Incremental"
          >
            <option
              value="Proximity"
            >
              Proximity
            </option>
            <option
              value="Incremental"
            >
              Incremental
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Selection Type
        </td>
        <td>
          <select
            className="form-control"
            disabled={false}
            id="selectCoverageInitializerSelectionType"
            onChange={[Function]}
          >
            <option
              value="SELECTED_AREAS"
            >
              Service Areas
            </option>
            <option
              value="SELECTED_LOCATIONS"
            >
              Locations
            </option>
            <option
              value="SELECTED_ANALYSIS_AREAS"
            >
              Analysis Areas
            </option>
            <option>
              All Service Areas
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td
          width="50%"
        >
          Selected
          <br />
           Geographies
        </td>
        <td>
          <div>
            (no items selected)
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`When we have an existing report 1`] = `
<div>
  <table
    className="table table-sm table-striped sidebar-options-table"
    id="table-coverage-initializer"
  >
    <tbody>
      <tr>
        <td>
          Coverage Type
        </td>
        <td>
          <select
            className="form-control"
            disabled={true}
            id="selectCoverageType"
            onChange={[Function]}
          >
            <option
              value="census_block"
            >
              Form 477
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Save coverage in
        </td>
        <td>
          <select
            className="form-control"
            disabled={true}
            id="selectGroupKeyType"
            onChange={[Function]}
          >
            <option
              value="serviceArea"
            >
              Service Areas
            </option>
            <option
              value="networkNode"
            >
              Network Nodes
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Limit To Marketable Technology
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={true}
            id="chkLimitMarketableTechnologies"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Limit To Max Equipment Speed
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={true}
            id="chkLimitMaxSpeed"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Use Existing Fiber
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={true}
            id="chkUseExistingFiber"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Use Planned Fiber
        </td>
        <td>
          <input
            className="checkboxfill"
            disabled={true}
            id="chkUsePlannedFiber"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Site Assignment
        </td>
        <td>
          <select
            className="form-control"
            disabled={true}
            onChange={[Function]}
            value="Incremental"
          >
            <option
              value="Proximity"
            >
              Proximity
            </option>
            <option
              value="Incremental"
            >
              Incremental
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Selection Type
        </td>
        <td>
          <select
            className="form-control"
            disabled={true}
            id="selectCoverageInitializerSelectionType"
            onChange={[Function]}
          >
            <option
              value="SELECTED_AREAS"
            >
              Service Areas
            </option>
            <option
              value="SELECTED_LOCATIONS"
            >
              Locations
            </option>
            <option
              value="SELECTED_ANALYSIS_AREAS"
            >
              Analysis Areas
            </option>
            <option>
              All Service Areas
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td
          width="50%"
        >
          Selected
          <br />
           Geographies
        </td>
        <td>
          <div>
            (no items selected)
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`When we have supplied all parameters 1`] = `
<div>
  <table
    className="table table-sm table-striped sidebar-options-table"
    id="table-coverage-initializer"
  >
    <tbody>
      <tr>
        <td>
          Coverage Type
        </td>
        <td>
          <select
            className="form-control"
            disabled={true}
            id="selectCoverageType"
            onChange={[Function]}
            value="location"
          >
            <option
              value="census_block"
            >
              Form 477
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Save coverage in
        </td>
        <td>
          <select
            className="form-control"
            disabled={true}
            id="selectGroupKeyType"
            onChange={[Function]}
          >
            <option
              value="serviceArea"
            >
              Service Areas
            </option>
            <option
              value="networkNode"
            >
              Network Nodes
            </option>
            <option
              value="location"
            >
              Locations
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Limit To Marketable Technology
        </td>
        <td>
          <input
            checked={true}
            className="checkboxfill"
            disabled={true}
            id="chkLimitMarketableTechnologies"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Limit To Max Equipment Speed
        </td>
        <td>
          <input
            checked={true}
            className="checkboxfill"
            disabled={true}
            id="chkLimitMaxSpeed"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Use Existing Fiber
        </td>
        <td>
          <input
            checked={true}
            className="checkboxfill"
            disabled={true}
            id="chkUseExistingFiber"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Use Planned Fiber
        </td>
        <td>
          <input
            checked={true}
            className="checkboxfill"
            disabled={true}
            id="chkUsePlannedFiber"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr>
        <td>
          Site Assignment
        </td>
        <td>
          <select
            className="form-control"
            disabled={true}
            onChange={[Function]}
            value="Incremental"
          >
            <option
              value="Proximity"
            >
              Proximity
            </option>
            <option
              value="Incremental"
            >
              Incremental
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          Selection Type
        </td>
        <td>
          <select
            className="form-control"
            disabled={true}
            id="selectCoverageInitializerSelectionType"
            onChange={[Function]}
            value="SELECTED_AREAS"
          >
            <option
              value="SELECTED_AREAS"
            >
              Service Areas
            </option>
            <option
              value="SELECTED_LOCATIONS"
            >
              Locations
            </option>
            <option
              value="SELECTED_ANALYSIS_AREAS"
            >
              Analysis Areas
            </option>
            <option>
              All Service Areas
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td
          width="50%"
        >
          Selected
          <br />
           Geographies
        </td>
        <td>
          <div>
            (no items selected)
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
